- Adapt task reassign activity message. [njohner]
- Queue each document archival conversion only once in a single request. [njohner]
- Do not fire task delegate activity twice. [njohner]
- Do not allow sorting on Keywords in dossier and document listings. [njohner]
- Also update content controls when updating doc properties. [buchi]
- Include preserved_as_paper_default in the @config endpoint and view. [Rotonen]
- Pass context and orgunit as parameters to webactions. [njohner]
- Implement resolving dossiers recursively via REST API. [lgraf]
- Allow members to access plone vocabularies through restapi. [elioschmutz]
- Workspaces do no longer inherit from dossiers. [elioschmutz]
- Optimise local roles security reindexing in tasks. [Rotonen]
- Add keywords-filter for document listings. [njohner]
- Add has_sametype_children metadata column. [njohner]
- Display the `changed` date instead the `modified` date for meeting-protocols. [elioschmutz]
- Show dossier from template action also when adding dossier disallowed. [njohner]
- Improve task restriction query, so that it works also on oracle backends. [phgross]
- Add restapi @journal endpoint to get journal entries. [elioschmutz]
- Omit the `revoke_permissions` field instead of only hiding it. [phgross]
- Fix issue on task creation when is_private feature is disabled. [phgross]
- Add webaction forms (add and edit) and management view. [njohner]
- Fix solr error during copy/paste of word document. [njohner]
- Allow non-member contributors to use the REST API. [Rotonen]
- Add nightly job runner. [njohner]
- Add document_type index. [njohner]
- Avoid object lookup for filesize and filename in @listing endpoint. [buchi]
- Add archival file management view on dossier level. [njohner]
- Show archival file state on documents overview for managers. [njohner]
- Fix tests failing due to timezone leading to date shift. [njohner]
- Display user chosen Favorites as a Oneoffixx template group. [Rotonen]